# DragonianLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Config.cmake  NatvisFile.natvis  README.md  Test.py  cpp.hint  report_dynamo_export.sarif  test.cpp
Demo/: CMakeLists.txt  SVC-TensorRT.cpp  TensorLib-Test.cpp  Unused.cpp  main.cpp  mainort.cpp  test
Demo/UI/: DataStruct.h  DefControl.cpp  DefControl.hpp  DefUIStyle.cpp  DefUIStyle.h  Label.cpp  Label.h  MainWindow.cpp  MainWindow.h  framework.h
Demo/UI/Extend/: CurveEditor.cpp  CurveEditor.h  IconButton.cpp  IconButton.h  Waveform.cpp  Waveform.h
Demo/UI/Page/: MainPage.cpp  MainPage.h  SettingPage.cpp  SettingsPage.h  SidePage.cpp  SidePage.h
Demo/base/: CMakeLists.txt  main.cpp
Demo/ncnn/svc/: CMakeLists.txt  main.cpp
Demo/onnx/demix/: CMakeLists.txt  main.cpp
Demo/onnx/mt/: CMakeLists.txt  main.cpp
Demo/onnx/sr/: CMakeLists.txt  main.cpp
Demo/onnx/svc/: CMakeLists.txt  main.cpp
Demo/onnx/tts/: CMakeLists.txt  main.cpp
NCNNLibrary/: CMakeLists.txt
NCNNLibrary/NCNNBase/: NCNNBase.h
NCNNLibrary/NCNNBase/Source/: NCNNBase.cpp  NCNNImpl.hpp
NCNNLibrary/SingingVoiceConversion/: SvcBase.hpp  VitsSvc.hpp
NCNNLibrary/SingingVoiceConversion/Model/: Vits-Svc.hpp
NCNNLibrary/SingingVoiceConversion/Model/Source/: Vits-Svc.cpp
NCNNLibrary/SingingVoiceConversion/Source/: SvcBase.cpp  VitsSvc.cpp
NCNNLibrary/SingingVoiceConversion/Util/: Base.hpp  Util.hpp
NCNNLibrary/SingingVoiceConversion/Util/Source/: Base.cpp  Util.cpp
NCNNLibrary/UnitsEncoder/: Hubert.hpp  Register.hpp  TTA2X.hpp
NCNNLibrary/UnitsEncoder/Source/: Hubert.cpp  Register.cpp  TTA2X.cpp
OnnxLibrary/: CMakeLists.txt  Config.cmake
OnnxLibrary/Base/: EnvManager.hpp  OrtBase.hpp
OnnxLibrary/Base/Source/: EnvManager.cpp  OrtBase.cpp  OrtDlib.hpp
OnnxLibrary/BertClap/: Context.hpp
OnnxLibrary/BertClap/Source/: Context.cpp
OnnxLibrary/Demix/: Base.hpp  CascadedNet.hpp  Demix.hpp
OnnxLibrary/Demix/Source/: Base.cpp  CascadedNet.cpp  Demix.cpp
OnnxLibrary/F0Extractor/: FCPE.hpp  RMVPE.hpp
OnnxLibrary/F0Extractor/Source/: FCPE.cpp  RMVPE.cpp
OnnxLibrary/G2P/: G2PW.hpp
OnnxLibrary/G2P/Source/: G2PW.cpp
OnnxLibrary/MusicTranscription/: ByteDancePianoTranScription.cpp  ByteDancePianoTranScription.hpp  MoePianoTranScription.cpp  MoePianoTranScription.hpp  MusicTranscriptionBase.cpp  MusicTranscriptionBase.hpp
OnnxLibrary/SingingVoiceConversion/Api/: NativeApi.h
OnnxLibrary/SingingVoiceConversion/Api/Source/: NativeApi.cpp
OnnxLibrary/SingingVoiceConversion/Api/header/: NativeApi.h
OnnxLibrary/SingingVoiceConversion/Api/src/: NativeApi.cpp
OnnxLibrary/SingingVoiceConversion/Model/: Base.hpp  Ctrls.hpp  DDSP-Svc.hpp  Diffusion-Svc.hpp  Reflow-Svc.hpp  Samplers.hpp  Vits-Svc.hpp
OnnxLibrary/SingingVoiceConversion/Model/Source/: Base.cpp  Ctrls.cpp  DDSP-Svc.cpp  Diffusion-Svc.cpp  Reflow-Svc.cpp  Samplers.cpp  Vits-Svc.cpp
OnnxLibrary/SingingVoiceConversion/Modules/Source/: Modules.cpp
OnnxLibrary/SingingVoiceConversion/Modules/Source/InferTools/: InferTools.cpp
OnnxLibrary/SingingVoiceConversion/Modules/Source/InferTools/Sampler/: BaseSampler.cpp  SamplerManager.cpp  Samplers.cpp
OnnxLibrary/SingingVoiceConversion/Modules/Source/InferTools/TensorExtractor/: BaseTensorExtractor.cpp  TensorExtractor.cpp  TensorExtractorManager.cpp
OnnxLibrary/SingingVoiceConversion/Modules/Source/Models/: DiffSvc.cpp  ModelBase.cpp  ReflowSvc.cpp  SVC.cpp  VitsSvc.cpp
OnnxLibrary/SingingVoiceConversion/Modules/header/: Modules.hpp
OnnxLibrary/SingingVoiceConversion/Modules/header/InferTools/: InferTools.hpp
OnnxLibrary/SingingVoiceConversion/Modules/header/Models/: DiffSvc.hpp  ModelBase.hpp  Params.hpp  ReflowSvc.hpp  SVC.hpp  VitsSvc.hpp
OnnxLibrary/SingingVoiceConversion/Modules/src/: Modules.cpp
OnnxLibrary/SingingVoiceConversion/Modules/src/InferTools/: InferTools.cpp
OnnxLibrary/SingingVoiceConversion/Modules/src/Models/: DiffSvc.cpp  ModelBase.cpp  ReflowSvc.cpp  SVC.cpp  VitsSvc.cpp
OnnxLibrary/SingingVoiceConversion/Util/: Base.hpp  Util.hpp
OnnxLibrary/SingingVoiceConversion/Util/Source/: Base.cpp  Util.cpp
OnnxLibrary/SuperResolution/: ImplSuperResolution.hpp  MoeSuperResolution.cpp  MoeSuperResolution.hpp  Real-ESRGan.cpp  Real-ESRGan.hpp  SuperResolution.cpp  SuperResolution.hpp
OnnxLibrary/SuperResolution/Source/: ImplSuperResolution.cpp  Real-ESRGan.cpp  SuperResolution.cpp
OnnxLibrary/TextToSpeech/Models/: FishSpeech.hpp  GPT-SoVits.hpp  Vits.hpp
OnnxLibrary/TextToSpeech/Models/Source/: FishSpeech.cpp  GPT-SoVits.cpp  Vits.cpp
OnnxLibrary/TextToSpeech/Modules/: TextToSpeech.hpp
OnnxLibrary/TextToSpeech/Modules/Models/Header/: FishSpeech.hpp  GPT-SoVits.hpp  ModelBase.hpp  Params.hpp  TTS.hpp
OnnxLibrary/TextToSpeech/Modules/Models/Source/: FishSpeech.cpp  GPT-SoVits.cpp  ModelBase.cpp  TTS.cpp  Vits.cpp
OnnxLibrary/TextToSpeech/Util/: Text2Speech.hpp  Util.hpp
OnnxLibrary/TextToSpeech/Util/Source/: Text2Speech.cpp
OnnxLibrary/UVR/: UVR.hpp
OnnxLibrary/UVR/Source/: UVR.cpp
OnnxLibrary/UnitsEncoder/: Hubert.hpp  Register.hpp  TTA2X.hpp
OnnxLibrary/UnitsEncoder/Source/: Hubert.cpp  Register.cpp  TTA2X.cpp
OnnxLibrary/Vocoder/: FireFlyGan.hpp  Hifigan.hpp  Nsf-Hifigan.hpp  Register.hpp  Vocoder.hpp  WaveGlow.hpp
OnnxLibrary/Vocoder/Source/: FireFlyGan.cpp  Hifigan.cpp  Nsf-Hifigan.cpp  Register.cpp  Vocoder.cpp  WaveGlow.cpp
TensorRT/: CMakeLists.txt  TRTBase.cpp  TRTBase.hpp
TensorRT/SingingVoiceConversion/: DiffSvc.hpp  ReflowSvc.hpp  SvcBase.cpp  SvcBase.hpp  VitsSvc.cpp  VitsSvc.hpp
TensorRT/SingingVoiceConversion/Source/: SvcBase.cpp  VitsSvc.cpp
TensorRT/SuperResolution/: MoeSuperResolution.cpp  MoeSuperResolution.hpp
TensorRT/SuperResolution/Source/: MoeSuperResolution.cpp
TensorRT/TensorRTBase/: TRTBase.cpp  TRTBase.hpp
TensorRT/TensorRTBase/Source/: TRTBase.cpp
TensorRT/tlibsr/: MoeSuperResolution.hpp
TensorRT/tlibsvc/: DiffSvc.hpp  ReflowSvc.hpp  SvcBase.cpp  SvcBase.hpp  VitsSvc.cpp  VitsSvc.hpp
(+395 files in other folders)
